--- a/app.json
+++ b/app.json
@@ -5,7 +5,15 @@
     "version": "1.0.0",
     "assetBundlePatterns": [
       "**/*"
-    ]
+    ],
+    "icon": "./assets/icon.png",
+    "splash": {
+      "image": "./assets/splash.png",
+      "resizeMode": "contain"
+    },
+    "android": {
+      "package": "com.gamonpo.coursifyme"
+    }
   },
   "name": "coursifyme"
 }
